created new objects and changes to the output