@@ -2,8 +2,10 @@ package com.ashwini.services;
 
 import com.ashwini.client.NagerClient;
 import com.ashwini.model.AvailableCountry;
+import com.ashwini.model.DedepulicateHolidayDataOutput;
 import com.ashwini.model.DedepulicateHolidayInput;
 import com.ashwini.model.HolidayData;
+import com.ashwini.model.HolidayDateNotWeekend;
 import com.ashwini.model.HolidayInput;
 import com.ashwini.model.LastThreeHolidayData;
 import jakarta.inject.Inject;
@@ -11,8 +13,8 @@ import jakarta.inject.Singleton;
 
 import java.time.DayOfWeek;
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.Comparator;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
@@ -31,10 +33,7 @@ public class NagerService {
     }
 
     public List<LastThreeHolidayData> getLastThreeHolidayInfo(String officialName) {
-        // convert it to code
-        AvailableCountry availableCountryResult = nagerClient.getAvailableCountries().stream()
-                .filter(availableCountry -> availableCountry.name().equalsIgnoreCase(officialName))
-                .findFirst().orElse(null);
+        AvailableCountry availableCountryResult = getAvailableCountry(officialName);
         if (availableCountryResult == null) {
             return null;
         }
@@ -46,37 +45,49 @@ public class NagerService {
                 .toList();
     }
 
-    public HashMap<String, Long> getNagerInfoAboutPublicHolidays(HolidayInput hoildayInput) {
+    public List<HolidayDateNotWeekend> getNagerInfoAboutPublicHolidays(HolidayInput hoildayInput) {
         if (hoildayInput.countryCode().isEmpty()) {
             return null;
         }
-        HashMap<String, Long> result = new HashMap<>();
+        List<HolidayDateNotWeekend> result = new ArrayList<>();
         hoildayInput.countryCode().forEach(countryCode -> {
-            // check if the countryCode is in available country code.
-            List<HolidayData> holidayDataList = nagerClient.getNagerInfoAboutPublicHolidays(hoildayInput.year(), countryCode);
-            if (holidayDataList != null) {
-                result.put(countryCode, holidayDataList.stream()
-                        .filter(holidayData -> holidayData.type().contains("Public"))
-                        .filter(holidayData -> holidayData.date().getDayOfWeek() != DayOfWeek.SATURDAY && holidayData.date().getDayOfWeek() != DayOfWeek.SUNDAY)
-                        .count());
+            AvailableCountry availableCountryResult = nagerClient.getAvailableCountries().stream()
+                    .filter(availableCountry -> availableCountry.countryCode().equalsIgnoreCase(countryCode)).findFirst().orElse(null);
+
+            if (availableCountryResult != null) {
+                List<HolidayData> holidayDataList = nagerClient.getNagerInfoAboutPublicHolidays(hoildayInput.year(), countryCode);
+                if (holidayDataList != null) {
+                    result.add(new HolidayDateNotWeekend(availableCountryResult.name(), holidayDataList.stream()
+                            .filter(holidayData -> holidayData.type().contains("Public"))
+                            .filter(holidayData -> holidayData.date().getDayOfWeek() != DayOfWeek.SATURDAY && holidayData.date().getDayOfWeek() != DayOfWeek.SUNDAY)
+                            .count()));
+                }
             }
         });
-        return result;
+        return result.stream().sorted(Comparator.comparing(HolidayDateNotWeekend::count).reversed()).collect(Collectors.toList());
+
     }
 
-    public List<HolidayData> getNagerInfoAboutDedepulicatedHolidays(DedepulicateHolidayInput dedepulicateHolidayInput) {
+    public List<DedepulicateHolidayDataOutput> getNagerInfoAboutDedepulicatedHolidays(DedepulicateHolidayInput dedepulicateHolidayInput) {
         List<HolidayData> firstHolidayData = nagerClient.getNagerInfoAboutPublicHolidays(dedepulicateHolidayInput.year(),
                 dedepulicateHolidayInput.firstCountryCode());
         List<HolidayData> secondHolidayData = nagerClient.getNagerInfoAboutPublicHolidays(dedepulicateHolidayInput.year(),
                 dedepulicateHolidayInput.secondCountryCode());
         return Stream.concat(firstHolidayData.stream(), secondHolidayData.stream())
                 .filter(distinctByKey(HolidayData::name))
-                .collect(Collectors.toList());
+                .toList().stream()
+                .map(holidayData -> new DedepulicateHolidayDataOutput(holidayData.localName(), holidayData.date())).toList();
     }
 
-    public static <T> Predicate<T> distinctByKey(Function<? super T, ?> keyExtractor) {
+    private <T> Predicate<T> distinctByKey(Function<? super T, ?> keyExtractor) {
         Set<Object> seen = ConcurrentHashMap.newKeySet();
         return t -> seen.add(keyExtractor.apply(t));
+    }
+
+    private AvailableCountry getAvailableCountry(String officialName) {
+        return nagerClient.getAvailableCountries().stream()
+                .filter(availableCountry -> availableCountry.name().equalsIgnoreCase(officialName))
+                .findFirst().orElse(null);
     }
 
 }
